shim: add shimLog infomation
Signed-off-by: Shirong Hao <shirong@linux.alibaba.com>

--- a/src/shim/config/config.toml
+++ b/src/shim/config/config.toml
@@ -1,2 +1,4 @@
 # Only support rune right now.
 runtime_class = "rune"
+
+log_level = "info" # "trace" "debug" "info" "warn" "error" "fatal" "panic"
