shim: create agent enclave container in Create() API
In the `Create` API of shim-rune, shim-rune will create an agent enclave container
with the pre-installed OCI bundle after the pause container is created successfully.

Signed-off-by: Shirong Hao <shirong@linux.alibaba.com>

--- a/src/shim/config/config.toml
+++ b/src/shim/config/config.toml
@@ -2,3 +2,9 @@
 runtime_class = "rune"
 
 log_level = "info" # "trace" "debug" "info" "warn" "error" "fatal" "panic"
+
+[containerd]
+    # Pre-installed OCI bundle for agent enclave container
+    agent_container_instance = "/opt/enclave-cc/agent-instance/"
+    # The root dir of agent enclave container running state
+    agent_container_root_dir = "/run/containerd/agent-enclave/"
