shim: add pull image function in PullImgae() API
The implementation of pull image function in shim is inherited from
kata-containers with the modifications.
https://github.com/kata-containers/kata-containers/pull/2866

1. The `PullImage` API of shim-rune will send `PullImageRequest` to the agent enclave container.
2. The agent enclave container uses the`image-rs` to pull images and the encrypted file system
capabilities provided by LibOS to create an encrypted unionfs (based sefs) image.
3. The agent enclave store the encrypted unionfs image in host.

Signed-off-by: Shirong Hao <shirong@linux.alibaba.com>
Signed-off-by: Dave Hay <david_hay@uk.ibm.com>
Co-authored-by: ashleyrobertson <ashleyro@uk.ibm.com>
Co-authored-by: stevenhorsman <steven@uk.ibm.com>

--- a/src/shim/config/config.toml
+++ b/src/shim/config/config.toml
@@ -8,3 +8,8 @@ log_level = "info" # "trace" "debug" "info" "warn" "error" "fatal" "panic"
     agent_container_instance = "/opt/enclave-cc/agent-instance/"
     # The root dir of agent enclave container running state
     agent_container_root_dir = "/run/containerd/agent-enclave/"
+    # The listening address of the agent container
+    # Note that the default URL will listen on all network interfaces.
+    # TODO: After occlum releases NGO at the end of 2022, the URL will
+    # switch to the Unix domain socket.
+    agent_url = "tcp:/127.0.0.1:7788"
