shim: support launch app enclave container based on occlum sefs
In PullImage API, shim-rune generates `container_id` based on image name and pass `container_id`
to agent enclave container with `PullImageRequest`, the agent enclave container can store
the encrypted unionfs image to directory distinguished by `container_id` in host,
such as `<agent_container_bundle_path>/rootfs/images/<container_id>/sefs`.

When shim-rune launch the app enclave container, shim-rune will find the corresponding encrypted
Member unionfs image through `container_id`. Then shim-rune overlay the `encrypted unionfs image` and
`boot instance bundle` to generate the final app enclave container bundle.

At last, shim-rune call `rune` to create and start the app enclave container.

Signed-off-by: Shirong Hao <shirong@linux.alibaba.com>

--- a/src/shim/config/config.toml
+++ b/src/shim/config/config.toml
@@ -13,3 +13,5 @@ log_level = "info" # "trace" "debug" "info" "warn" "error" "fatal" "panic"
     # TODO: After occlum releases NGO at the end of 2022, the URL will
     # switch to the Unix domain socket.
     agent_url = "tcp:/127.0.0.1:7788"
+    # Pre-installed OCI bundle for boot instance
+    boot_container_instance = "/opt/enclave-cc/boot-instance/"
