--- a/src/enclave-agent/Cargo.toml
+++ b/src/enclave-agent/Cargo.toml
@@ -28,5 +28,7 @@ clap = "2.33.3"
 
 protocols = { path = "../libs/protocols" }
 
+serde_json = ">=1.0.9"
+
 [build-dependencies]
 ttrpc-codegen = "0.2.0"
