--- a/src/enclave-agent/Makefile
+++ b/src/enclave-agent/Makefile
@@ -7,6 +7,9 @@ else
     release := --release
 endif
 
+rats-tls:
+	RUSTFLAGS="-C link-args=-Wl,-rpath=/usr/local/lib/rats-tls:/usr/local/lib" cargo build $(release)
+
 all:
 	$(RUST_FLAGS) cargo build $(release)
 
