fix: build error for dependency error of enclave-agent
Close https://github.com/confidential-containers/enclave-cc/issues/72

As best-practice for rust, a binary should include `Cargo.lock`,
however a crate module should not.

Signed-off-by: Xynnn007 <xynnn@linux.alibaba.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 */target
 src/*/target
-src/*/Cargo.lock
+src/libs/Cargo.lock
 src/libs/protocols/src/image.rs
 src/libs/protocols/src/image_ttrpc.rs
