fix: refer new image-rs
The new rev of the image-rs introduces the rats-tls, to refer it,
we install rats-tls in the complie env and update the reference
to the image-rs.

Signed-off-by: Xin, Haokun <haokun.xin@intel.com>

--- a/src/enclave-agent/Makefile
+++ b/src/enclave-agent/Makefile
@@ -8,7 +8,7 @@ else
 endif
 
 all:
-	$(RUST_FLAGS) cargo build $(release)
+	RUSTFLAGS="-C link-args=-Wl,-rpath=/usr/local/lib/rats-tls:/usr/local/lib" cargo build $(release)
 
 clean:
 	cargo clean
