--- a/.github/workflows/hlc_test.yml
+++ b/.github/workflows/hlc_test.yml
@@ -2,8 +2,9 @@ name: hlc-test
 run-name: test-secrets
 on: push
 jobs:
-  output secret env vars:
+  output-secret-env-vars:
     runs-on: ubuntu-latest
     steps:
       - run: echo "usr: $QUAY_USR_HLC"
       - run: echo "nonexist: $ABC"
+      
