--- a/.github/workflows/hlc_test.yml
+++ b/.github/workflows/hlc_test.yml
@@ -5,6 +5,8 @@ jobs:
   output-secret-env-vars:
     runs-on: ubuntu-latest
     steps:
+      - name: step 0
+        run: echo hello, world!
       - name: step 1
         run: echo usr $QUAY_USR_HLC
       - name: step 2
