--- a/.github/workflows/ci_test.yaml
+++ b/.github/workflows/ci_test.yaml
@@ -5,10 +5,10 @@ jobs:
   runtime-class:
     runs-on: self-hosted
     steps: 
-      - name: step 0
-        run: ./runtimeclass.sh install_coco_operator
-      - name: step 1
-        run: echo usr
+      - name: install operator
+        run: ./runtimeclass_ci.sh install_coco_operator
+      - name: install enclave-cc
+        run: ./runtimeclass_ci.sh install_enclave_cc_runtimeclass
       - name: step 1.5
         run: echo $QUAY_USR_HLC
       - name: step 2
