--- a/.github/workflows/ci_test.yaml
+++ b/.github/workflows/ci_test.yaml
@@ -1,10 +1,13 @@
 name: ci-test
 run-name: test runtimeclass 
-on: push
+on: 
+  push:
+     branches: [ "main" ] 
 jobs: 
   runtime-class:
     runs-on: self-hosted
     steps: 
+      - uses: actions/checkout@v3
       - name: install operator
         run: |
           echo $pwd
