--- a/.github/workflows/ci_test.yaml
+++ b/.github/workflows/ci_test.yaml
@@ -8,6 +8,13 @@ jobs:
     runs-on: self-hosted
     steps: 
       - uses: actions/checkout@v3
+     
+      - name: uninstall enclave-cc 
+        run: |
+          ./.github/workflows/runtimeclass_ci.sh uninstall_enclave_cc_runtimeclass
+      - name: uninstall operator
+        run: |
+          ./.github/workflows/runtimeclass_ci.sh uninstall_coco_operator
       - name: install operator
         run: |
           echo $pwd
@@ -15,12 +22,6 @@ jobs:
       - name: install enclave-cc
         run: |
           ./.github/workflows/runtimeclass_ci.sh install_enclave_cc_runtimeclass
-      - name: uninstall enclave-cc 
-        run: |
-          ./.github/workflows/runtimeclass_ci.sh uninstall_enclave_cc_runtimeclass
-      - name: install operator
-        run: |
-          ./.github/workflows/runtimeclass_ci.sh uninstall_coco_operator
       - name: step 5
         run: echo "finish"
       
