--- a/.github/workflows/ci_test.yaml
+++ b/.github/workflows/ci_test.yaml
@@ -8,7 +8,16 @@ jobs:
     runs-on: self-hosted
     steps: 
       - uses: actions/checkout@v3
-      
+      - name: install operator
+        run: |
+          echo $pwd
+          ./.github/workflows/runtimeclass_ci.sh install_coco_operator
+      - name: install enclave-cc
+        run: |
+          ./.github/workflows/runtimeclass_ci.sh install_enclave_cc_runtimeclass
+      - name: uninstall enclave-cc 
+        run: |
+          ./.github/workflows/runtimeclass_ci.sh uninstall_enclave_cc_runtimeclass
       - name: uninstall operator
         run: |
           ./.github/workflows/runtimeclass_ci.sh uninstall_coco_operator
