--- a/.github/workflows/ci_test.yaml
+++ b/.github/workflows/ci_test.yaml
@@ -8,10 +8,10 @@ jobs:
     runs-on: self-hosted
     steps: 
       - uses: actions/checkout@v3
-#       - name: install operator
-#         run: |
-#           echo $pwd
-#           ./.github/workflows/runtimeclass_ci.sh install_coco_operator
+      - name: install operator
+        run: |
+          echo $pwd
+          ./.github/workflows/runtimeclass_ci.sh install_coco_operator
       - name: install enclave-cc
         run: |
           ./.github/workflows/runtimeclass_ci.sh install_enclave_cc_runtimeclass
