--- a/.github/workflows/test_ci_cases.yaml
+++ b/.github/workflows/test_ci_cases.yaml
@@ -5,7 +5,7 @@ on:
      branches: [ "main" ] 
 
 jobs: 
-  CI tests:
+  CI-tests:
     runs-on: self-hosted
     steps: 
       - name: Checkout latest enclave-cc source code
