--- a/.github/workflows/test_ci_cases.yaml
+++ b/.github/workflows/test_ci_cases.yaml
@@ -8,6 +8,13 @@ jobs:
   CI-tests:
     runs-on: self-hosted
     steps: 
+      - name: Login to Quay.io
+        uses: docker/login-action@v2
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USR_HLC }}
+          password: ${{ secrets.QUAY_PWD_HLC }}
+
       - name: Checkout latest enclave-cc source code
         uses: actions/checkout@v3
         with:
