--- a/.github/workflows/test_ci_cases.yaml
+++ b/.github/workflows/test_ci_cases.yaml
@@ -11,17 +11,27 @@ jobs:
       - name: Echo current user
         run: whoami
         
-      - name: Login to Quay.io
+#       - name: Login to Quay.io
+#         uses: docker/login-action@v2
+#         with:
+#           registry: quay.io
+#           username: ${{ secrets.QUAY_USR_HLC }}
+#           password: ${{ secrets.QUAY_PWD_HLC }}
+
+      - name: Checkout latest enclave-cc source code
+        uses: actions/checkout@v3
+        with:
+          ref: main
+          
+      - name: Login to Docker Container Registry
         uses: docker/login-action@v2
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USR_HLC }}
           password: ${{ secrets.QUAY_PWD_HLC }}
 
-      - name: Checkout latest enclave-cc source code
-        uses: actions/checkout@v3
-        with:
-          ref: main
+      - name: echo secrets
+        run: "echo quay_usr_hlc: ${{ secrets.QUAY_USR_HLC }}"
                 
       - name: Install CoCo operator
         run: ./ci/ci_tests.sh install_coco_operator
