--- a/src/enclave-agent/Cargo.toml
+++ b/src/enclave-agent/Cargo.toml
@@ -6,30 +6,27 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protobuf = { version = "=2.14.0" }
-bytes = "0.4.11"
-libc = "0.2.58"
-byteorder = "1.3.2"
-log = "0.4.11"
-simple-logging = "2.0.2"
-nix = "0.23.0"
-ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }
-ctrlc = { version = "3.0", features = ["termination"] }
-
-# Async runtime
-tokio = { version = "1.14.0", features = ["full"] }
+anyhow = "1.0.32"
 async-trait = "0.1.42"
-
+byteorder = "1.3.2"
+bytes = "0.4.11"
+clap = "2.33.3"
+ctrlc = { version = "3.0", features = ["termination"] }
 image-rs = { git = "https://github.com/confidential-containers/image-rs", features = ["occlum_feature", "cosign"], default-features = false, rev = "v0.3.0" }
 kata-sys-util = { git = "https://github.com/kata-containers/kata-containers", rev = "4b57c04c3379d6adc7f440d156f0e4c42ac157df" }
-
-anyhow = "1.0.32"
-clap = "2.33.3"
-
+libc = "0.2.58"
+log = "0.4.11"
+nix = "0.23.0"
+protobuf = { version = "=2.14.0" }
 protocols = { path = "../libs/protocols" }
-
 serde = ">=1.0.9"
 serde_json = ">=1.0.9"
+simple-logging = "2.0.2"
+
+# Async runtime
+tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
+
+ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }
 
 [build-dependencies]
 ttrpc-codegen = "0.2.0"
