--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -17,8 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04]
-        go-version: [1.17.x, 1.18.x, 1.19.x]
+        os: [ubuntu-22.04]
+        go-version: [1.19.x, 1.20.x]
 
     steps:
       - uses: actions/setup-go@v3
@@ -40,6 +40,6 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50.1
+          version: v1.51.2
           args: -v --timeout 5m
           working-directory: 'src/shim'
