ci: change self-hosted runner label
Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - runner: sgx
+          - runner: sgx-ecc
             sgx_mode: HW
           - runner: ubuntu-22.04
             sgx_mode: SIM
