ci: use setup-go cache properly
Github Actions report the following:

shim basic test (ubuntu-22.04, 1.20.x)

Restore cache failed: Dependencies file is not found in
/home/runner/work/enclave-cc/enclave-cc. Supported file pattern: go.sum

Point setup-go to src/shim/go.sum to use cache.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -21,11 +21,12 @@ jobs:
         go-version: [1.19.x, 1.20.x]
 
     steps:
+      - uses: actions/checkout@v3
+
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-
-      - uses: actions/checkout@v3
+          cache-dependency-path: src/shim/go.sum
 
       - name: Run build
         run: |
