--- a/src/enclave-agent/Makefile
+++ b/src/enclave-agent/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all clean
+.PHONY: eaakbc clean cckbc
 
 DEBUG ?=
 ifdef DEBUG
@@ -7,8 +7,14 @@ else
     release := --release
 endif
 
-all:
-	RUSTFLAGS="-C link-args=-Wl,-rpath=/usr/local/lib/rats-tls:/usr/local/lib" cargo build $(release)
+all cc-kbc:
+	RUSTFLAGS="-C link-args=-W" cargo build $(release)
+
+eaa-kbc:
+	RUSTFLAGS="-C link-args=-Wl,-rpath=/usr/local/lib/rats-tls:/usr/local/lib" cargo build $(release) --no-default-features --features eaa-kbc-rustls-tls
+
+sample-kbc:
+	RUSTFLAGS="-C link-args=-W" cargo build $(release) --no-default-features --features simple
 
 clean:
 	cargo clean
