--- a/src/enclave-agent/test_data/decrypt_config/decrypt_config_disable_validate.conf
+++ b/src/enclave-agent/test_data/decrypt_config/decrypt_config_disable_validate.conf
@@ -1,4 +1,4 @@
 {
-    "key_provider": "provider:attestation-agent:eaa_kbc::127.0.0.1:1234",
+    "key_provider": "provider:attestation-agent:cc_kbc::http://127.0.0.1:8080",
     "security_validate": false
 }
