--- a/src/enclave-agent/Cargo.toml
+++ b/src/enclave-agent/Cargo.toml
@@ -34,7 +34,11 @@ default = ["cc-kbc-rustls-tls"]
 # confidential resource injection using sample-kbc
 simple = ["image-rs/snapshot-unionfs", "image-rs/signature-cosign-rustls", "image-rs/signature-simple", "image-rs/keywrap-native", "image-rs/encryption-ring", "image-rs/oci-distribution-rustls"]
 
-# confidential resource injection using eaa-kbc
+# confidential resource injection using eaa-kbc. (Deprecated)
+#
+# Note: eaa-kbc support for enclave-cc has been deprecated.
+# Check issue https://github.com/confidential-containers/enclave-cc/issues/160
+# for more information.
 eaa-kbc-rustls-tls = [ "image-rs/enclave-cc-eaakbc-rustls-tls" ]
 eaa-kbc-native-tls = [ "image-rs/enclave-cc-eaakbc-native-tls" ]
 
