--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -71,6 +71,11 @@ jobs:
           override: true
           components: rustfmt, clippy
 
+      - name: Install dm-verity dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libdevmapper-dev
+
       - name: Check formatting
         uses: actions-rs/cargo@v1
         with:
