--- a/src/enclave-agent/Cargo.toml
+++ b/src/enclave-agent/Cargo.toml
@@ -13,12 +13,13 @@ clap = "2.33.3"
 # logger module
 env_logger = "0.10.0"
 
-image-rs = { git = "https://github.com/confidential-containers/guest-components.git", default-features = false, tag = "v0.7.0" }
+image-rs = { git = "https://github.com/confidential-containers/guest-components.git", default-features = false, rev = "c58e12bbbd23df83f54f3ca43fb5abbd785c07fe" }
 kata-sys-util = { git = "https://github.com/kata-containers/kata-containers", rev = "4b57c04c3379d6adc7f440d156f0e4c42ac157df" }
 log = "0.4.11"
 protocols = { path = "../libs/protocols" }
 serde = ">=1.0.9"
 serde_json = ">=1.0.9"
+sha2 = "0.10.7"
 
 # Async runtime
 tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "signal"] }
