--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -63,6 +63,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libtss2-dev libtdx-attest-dev
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
